chore: replace metalsmith-prism with highlight.js (#4493)
Remove a metalsmith plugin that hasn't been updated recently. This has
several advantages:

* Removes some vulnerabilities the GitHub UI is complaining about.
* Eliminates an error message when building involving prism.
* Uses the same highlighting library as the docs, setting the stage for
  possible consolidation and/or alignment.

--- a/layouts/partials/footer.hbs
+++ b/layouts/partials/footer.hbs
@@ -36,3 +36,5 @@
 </footer>
 
 <script src="/static/js/main.js" async defer></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.0/highlight.min.js" integrity="sha512-BNc7saQYlxCL10lykUYhFBcnzdKMnjx5fp5s5wPucDyZ7rKNwCoqJh1GwEAIhuePEK4WM9askJBRsu7ma0Rzvg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script>hljs.highlightAll();</script>
